--- a/app/src/main/res/layout/item_chat_bubble_other.xml
+++ b/app/src/main/res/layout/item_chat_bubble_other.xml
@@ -2,71 +2,57 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="8dp"
-    android:paddingVertical="4dp">
-
-    <TextView
-        android:id="@+id/tv_chat_date_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="2025-12-03"
-        android:textSize="12sp"
-        android:textColor="#888888"
-        android:background="@drawable/bg_input_rounded"
-        android:paddingHorizontal="12dp"
-        android:paddingVertical="4dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:paddingVertical="4dp"
+    android:paddingHorizontal="16dp">
 
     <ImageView
-        android:id="@+id/iv_bubble_other_profile"
+        android:id="@+id/iv_chat_profile"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginTop="4dp"
+        android:src="@drawable/profile"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_chat_date_header"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-        android:id="@+id/tv_bubble_other_name"
+        android:id="@+id/tv_chat_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="유리"
+        android:text="이름"
         android:textSize="12sp"
+        android:textColor="#555555"
         android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@id/iv_bubble_other_profile"
-        app:layout_constraintTop_toTopOf="@id/iv_bubble_other_profile"/>
+        android:layout_marginBottom="2dp"
+        app:layout_constraintStart_toEndOf="@id/iv_chat_profile"
+        app:layout_constraintTop_toTopOf="@id/iv_chat_profile"/>
 
     <TextView
-        android:id="@+id/tv_bubble_other_content"
+        android:id="@+id/tv_chat_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="어디쯤이야? 거의 다 왔어?"
-        android:padding="10dp"
-        android:textColor="#000000"
+        android:text="메시지 내용"
         android:textSize="15sp"
+        android:textColor="#000000"
         android:background="@drawable/bg_chat_bubble_other"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="8dp"
+        android:maxWidth="240dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        app:layout_constraintStart_toEndOf="@id/iv_bubble_other_profile"
-        app:layout_constraintTop_toBottomOf="@id/tv_bubble_other_name"
-        app:layout_constraintWidth_max="260dp"/>
+        app:layout_constraintStart_toEndOf="@id/iv_chat_profile"
+        app:layout_constraintTop_toBottomOf="@id/tv_chat_name"/>
 
     <TextView
-        android:id="@+id/tv_bubble_other_time"
+        android:id="@+id/tv_chat_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="오후 2:31"
+        android:text="오전 10:00"
         android:textSize="10sp"
+        android:textColor="#AAAAAA"
         android:layout_marginStart="4dp"
-        app:layout_constraintStart_toEndOf="@id/tv_bubble_other_content"
-        app:layout_constraintBottom_toBottomOf="@id/tv_bubble_other_content"/>
+        app:layout_constraintStart_toEndOf="@id/tv_chat_message"
+        app:layout_constraintBottom_toBottomOf="@id/tv_chat_message"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
